motyga-rs/tui/src/chatwidget/snapshots/motyga_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Analyzing (0s • esc to interrupt)                                             "
"                                                                                "
"                                                                                "
"› Ask Motyga to do anything                                                     "
"                                                                                "
"  gpt-5.5 default · /tmp/project                                                "
